# TDK

./: README.md
classification_model/: svm_parameters.txt  svm_script.py  test_X.csv  test_Y.csv  train_X.csv  train_Y.csv
processing_firmware/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
processing_firmware/src/: main.c  processing.c  processing.h  system_tasks.c  system_tasks.h
processing_firmware/src/ADS1298/: ADS1298.c  ADS1298.h  ADS129x_codes.h
